# model_os

./: .dockerignore  .gitignore  .replit  Dockerfile  Dockerfile.phi  Dockerfile.whisper  README.md  __init__.py  ai_bootstrap.txt  cache.py  compose.yaml  config.py  deploy.sh  dev_stream.txt  docker-compose.yml  git_history.sh  main.py  model_os.py  model_os.py.save  playground.ipynb  pyproject.toml  replit.nix  requirements.txt  utils.py
host_os/: Dockerfile  docker-compose.yaml
models/: .models.py.swp  model.py  models.py
phi_service/: Dockerfile.phi  __init__.py  phi_service.py
static/: index.html
utility_os/: README.md  output.csv  pyproject.yaml  requirements.txt  setup.py  test.json
utility_os/src/utility_os/: __init__.py  _app.py
utility_os/src/utility_os/api/: docker.py
utility_os/src/utility_os/terminal/: services.yaml
utility_os/src/utility_os/terminal/css/: home_layout.tcss  info_layout.tcss  layout.tcss  main_layout.tcss  modal_layout.tcss  tab_layout.tcss
utility_os/src/utility_os/terminal/screens/: HomeScreen.py  LoadingScreen.py  QuitScreen.py
utility_os/src/utility_os/terminal/tabs/: DockerTab.py  HelpTab.py  HostTab.py  SettingsTab.py  SystemTab.py  UpdatesTab.py
utility_os/src/utility_os/terminal/widgets/: ItemsList.py  Table.py  Tree.py
utility_os/src/utility_os/utils/: blockchar_stream.py  braille_stream.py  bytes.py  generic.py  time.py
utility_os/tests/: test_streams.py
webhook_listener/: Dockerfile  requirements.txt  webhook_listener.py
whisper_service/: Dockerfile.whisper  whisper_service.py
(+11 files in other folders)
