[tool.poetry]
name = "repl-nix-modelossandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
transformers = "^4.44.2"
pydub = "^0.25.1"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
pillow = "^10.4.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
